# ClarityForge

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  EXECUTION_REPORT.md  FUNCTIONAL_SCOPE.md  LICENSE  Makefile  README.md  REPOSITORY_AUDIT_FINDINGS.md  STEP1_COMPLETION_SUMMARY.md  docker-compose.yml  e2e_verification_report.md  integration_test.py  openapi.yaml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task_template.md
.github/workflows/: build-and-test.yml  commit-lint.yml  labeler.yml  process_adherence.yml  quality-gate.yml  retrospective.yml  ruleset-check.yml
clarity_forge/: __init__.py  cli.py  config.py
clarity_forge/api/: __init__.py  dependencies.py
clarity_forge/api/v1/: __init__.py  endpoints.py
clarity_forge/core/: __init__.py  __main__.py  plan_engine.py  project_setup.py
config/: settings.example.json
docs/: AGENT_RULESET.md  CONTRIBUTING.md  Guardrail_Specification.md  TESTING.md  guardrail_usage_guide.md  llm_bootstrap_protocol.md  project_bootstrap_template.md
docs/ai_engine/: ARCHITECTURE.md
docs/research/: 00_Project_Overview.md
docs/research/API_Documentation/: README.md
docs/research/Project_Configuration_Wizard/: README.md
docs/research/Roles_and_Responsibilities/: README.md
docs/research/SDLC/: README.md
docs/research/Security/: README.md
scripts/: README.md  check_status_transitions.py  requirements.txt  setup_project.py
scripts/.github/workflows/: ci.yml
scripts/ai_engine/: mock_model.py  model.py
scripts/assistant/: __init__.py  main.py
scripts/assistant/ai_engine/: main.py
scripts/assistant/conversation/: INTEGRATION_DOCS.md  main.py  manager.py  test_integration.py
scripts/assistant/datastore/: __init__.py  main.py
scripts/assistant/scaffolding/: scaffolder.py
scripts/datastore/: __init__.py  store.py
scripts/recommendation/: stack.py
scripts/scaffolding/: builder.py  planner.py
scripts/scripts/ai_engine/: model.py
scripts/tests/: test_ai_engine.py  test_end_to_end.py  test_recommendation.py  test_remote_data.py  test_scaffolding.py
services/agent_sandbox/: Dockerfile  sandbox_wrapper.sh  test_sandbox.py
services/ai_engine_service/: .coveragerc  .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  INTEGRATION.md  MONITORING_CONFIG.md  README.md  entrypoint.sh  issue_1_developer_code_review.md  issue_2_pm_requirement_extraction.md  issue_3_teamlead_tech_recommendations.md  issue_4_sysadmin_model_monitoring.md  main.py  openapi.yaml  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py  test_monitoring.py  test_service.py
services/ai_engine_service/docs/: DEFINITION_OF_DONE.md
services/ai_engine_service/tests/: README.md  __init__.py  conftest.py  test_analyze_endpoint.py  test_integration.py  test_models_endpoint.py
services/vision_alignment/: main.py  prompts.py
src/agent_sandbox/: Dockerfile  requirements.txt  sandbox_wrapper.sh
src/vision_alignment/: Dockerfile  requirements.txt
tests/: conftest.py  test_api.py  test_check_status_transitions.py  test_initialization_sandbox.py  test_plan_engine.py  test_sandbox.py
(+5 files in other folders)
